--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -24,8 +24,9 @@
         gap: 20px;
         
         img{
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 30px;
+            object-fit:fill;
         }
     }
 
