--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -10,7 +10,8 @@ header{
     @include flex_spaceB;
     position:sticky;
     top: 0;
-   
+    left: 0;
+   z-index: 10;
     @media screen and (min-width:769px) {
         height:$header_height;
     }
@@ -19,7 +20,7 @@ header{
 //brand logo in header
 .brand_logo{
     background-color: $secondary_color;
-    height: 100%;
+    height: 51px;
     width: 111px;
     @include flex_center(row);
     justify-content: flex-start;
@@ -31,6 +32,7 @@ header{
     @media screen and (min-width:769px) {
        width: 150px;
        padding-left: 25px;
+       height: 100%;
     }
 
         img{
