--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
     background-position: center;
     background-size: cover;
     width: 100vw;
+    position: relative;
 
     @media screen and (min-width:769px) {
         width: 110vw;
@@ -24,13 +25,16 @@
         height: 85vh; 
         background-color: $secondary_color;
         opacity: 0.6;
-        position: absolute;
-        z-index: 1;
+        position:absolute;
+        top: 0px;
+        left: 0;
+        z-index: 0;
     }
 
     &_caption{
         width: 70%;
         position: absolute;
+        top: 70%;
         left: 50%;
         transform: translateX(-50%);
         bottom: 14%;
